style: Correct dropdown alignment

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,7 @@ button.dropdown-button {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
   margin-bottom: 20px;
   color: #AF9C8B;
   font-size: 1.1rem;
@@ -159,7 +160,7 @@ button.dropdown-button {
   padding-left: 0;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-top: 0;
+  margin: 0 auto;
 }
 
 .Attractions::before{
